# cpp-backend-practicum

./: .gitignore  requirements.txt
.github/workflows/: main.yml
sprint1/problems/async_server/precode/src/: main.cpp
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_helper.cpp  json_helper.h  json_loader.cpp  json_loader.h  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/map_json/precode/src/: http_server.h  json_loader.cpp  main.cpp  request_handler.h
sprint1/problems/map_json/solution/src/: http_server.cpp  request_handler.cpp
sprint1/problems/radio/precode/: CMakeLists.txt
sprint1/problems/radio/precode/src/: main.cpp  receiver.h  sender.h
sprint1/problems/restaurant_multi_threaded/precode/src/: main.cpp
sprint1/problems/restaurant_single_threaded/precode/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/precode/src/: main.cpp
sprint1/problems/sync_server/precode/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt
sprint1/samples/tcp-udp/src/: tcp_client.cpp  tcp_server  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint1/samples/tcp-udp/src/tcp_server.dSYM/Contents/: Info.plist
sprint1/samples/tcp-udp/src/tcp_server.dSYM/Contents/Resources/DWARF/: tcp_server
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: command_line_parser.cpp  command_line_parser.h  game.cpp  game.h  game_session.cpp  game_session.h  http_server.h  json_helper.cpp  json_helper.h  json_loader.cpp  main.cpp  model_dog.cpp  model_dog.h  model_map.cpp  model_map.h  model_player.h  model_utils.h  player_tokens.cpp  player_tokens.h  request_handler.h  request_handler_helper.h  request_handler_strategy.cpp  request_handler_strategy.h  ticker.cpp
sprint2/problems/game_state/solution/src/: game.cpp  game_session.h  json_helper.cpp  json_helper.h  json_loader.cpp  model_dog.h  model_map.cpp  model_map.h  model_player.h  request_handler_helper.cpp  request_handler_strategy.cpp  request_handler_strategy.h  tagged.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: dog.h  game_session.h  http_server.h  model.cpp  model.h  path_helper.cpp  path_helper.h  player.h  player_tokens.cpp  player_tokens.h  request_handler.cpp  request_handler.h  request_handler_helper.cpp  request_handler_helper.h  request_handler_strategy.cpp  request_handler_strategy.h
sprint2/problems/logger/solution/: main.cpp  my_logger.h
sprint2/problems/metrics/solution/: web_exporter.py
sprint2/problems/metrics/solution/src/: main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/move_players/solution/: Dockerfile
sprint2/problems/move_players/solution/src/: game_session.h  json_helper.cpp  json_helper.h  model_dog.h  model_map.cpp  model_map.h  model_player.h  model_utils.h  path_helper.h  request_handler.h  request_handler_helper.h  request_handler_strategy.cpp  request_handler_strategy.h
sprint2/problems/server_logging/solution/: CMakeLists.txt
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  json_helper.cpp  json_helper.h  json_loader.h  logger.cpp  logger.h  main.cpp  path_helper.h  request_handler.cpp
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/src/: json_helper.cpp  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/src/: game.h  game_session.cpp  game_session.h  json_loader.cpp  model_dog.cpp  model_dog.h  model_map.cpp  model_map.h  model_player.h  model_utils.cpp  model_utils.h  request_handler.h  request_handler_helper.h  request_handler_strategy.cpp  request_handler_strategy.h
sprint3/problems/ammo/solution/: ammo.txt
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/data/: config.json
sprint3/problems/find_return/solution/src/: collision_detector.cpp  collision_detector.h  command_line_parser.h  extra_data.cpp  game_session.cpp  game_session.h  json_helper.cpp  json_helper.h  model_dog.h  model_loot_item.h  model_map.h  model_utils.h  request_handler_strategy.cpp  ticker.cpp
sprint3/problems/find_return/solution/tests/: collision-detector-tests.cpp  model-tests.cpp
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gather-tests/solution/src/: collision_detector.h  geom.h
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gather/solution/src/: collision_detector.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/src/: extra_data.h  game.cpp  game_server_exceptions.h  game_session.cpp  game_session.h  json_helper.cpp  json_loader.cpp  main.cpp  model_dog.h  model_map.cpp  model_utils.h  player_tokens.cpp  request_handler_helper.h  request_handler_strategy.cpp
sprint3/problems/gen_objects/solution/tests/: main.cpp
sprint3/problems/htmldecode/solution/: conanfile.txt
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp  htmldecode.h
sprint3/problems/htmldecode/solution/tests/: tests.cpp
sprint3/problems/instrumentation/solution/: event2dot
sprint3/problems/instrumentation/solution/v2/: gmon.out
sprint3/problems/load/solution/: ammo.txt
sprint3/problems/scores/solution/src/: collision_detector.cpp  collision_detector.h  extra_data.cpp  extra_data.h  game_session.cpp  game_session.h  geom.h  http_server.cpp  json_helper.cpp  json_loader.cpp  (+9 more)
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/stress/solution/: load.yaml
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint3/problems/urlencode/solution/: CMakeLists.txt
(+29 files in other folders)
